--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                             flex flex-col rounded-lg
                             p-16 text-white">
 
-          <div onclick="close_popup.call(this)" id="popup-close" class="w-full my-2 ">
+          <div onclick="close_popup.call(this)" id="popup-close" class="cursor-pointer w-full my-2 ">
             <svg class="fill-white h-10" viewBox="0 0 524 524" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               
               <g id="Layer_x0020_1">
