--- a/index.html
+++ b/index.html
@@ -527,6 +527,7 @@
       <div id="popup_box" class="hidden w-full md:h-full bg-black/80 backdrop-filter backdrop-blur-xl
                             absolute z-[9999999]
                             flex flex-col rounded-lg
+                            transition-all ease-in-out delay-300 duration-300
                             p-16 text-white">
 
           <div onclick="close_popup.call(this)" id="popup-close" class="cursor-pointer w-full my-2 ">
